--- a/style.css
+++ b/style.css
@@ -117,3 +117,43 @@ div.desc {
     display: table;
     clear: both;
 }
+
+/* Dropdown */
+.dropbtn {
+    background-color: #103880;
+    color: white;
+    padding: 10px;
+    font-size: 20px;
+    border: none;
+}
+  
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f0f0f0;
+    min-width: 150px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  
+.dropdown-content a {
+    color: black;
+    padding: 12px 15px;
+    text-decoration: none;
+    display: block;
+}
+
+button {
+    font-family:"Open Sans",sans-serif;    
+}
+
+.dropdown:hover .dropbtn {background-color: #103070;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown-content a:hover {background-color: #d0d0d0;}
