--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
     padding: 10px;
+    font-size: 20px;
 }
 
 /* Gallery */
@@ -197,4 +198,28 @@ button {
 .tooltip:hover .tooltiptext {
     visibility: visible;
     opacity: 1;
+}
+
+/* Collapsible */
+.collapsible {
+    background-color: #777;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+}
+  
+.active, .collapsible:hover {
+    background-color: #555;
+}
+  
+.content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
 }
