--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     position: sticky;
     top: 0;
     background-color: #105090;
+    background-image: repeating-linear-gradient(90deg,#105090,#105090 30%,#40a0e0);
     padding: 10px;
 }
 /* .margin-left */
@@ -169,7 +170,7 @@ button {
   
 .tooltip .tooltiptext {
     visibility: hidden;
-    width: 120px;
+    width: 200px;
     background-color: #555;
     color: #fff;
     text-align: center;
@@ -179,7 +180,7 @@ button {
     z-index: 1;
     bottom: 125%;
     left: 50%;
-    margin-left: -60px;
+    margin-left: -100px;
     opacity: 0;
     transition: opacity 0.3s;
 }
