--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a {
     font-size: 20px;
 }
 a.button:link, a.button:visited {
-    background-color: #c8c8c8;
+    background-color: #d8d8d8;
     color: black;
     padding: 5px 10px;
     text-align: center;
@@ -55,7 +55,7 @@ a.button:link, a.button:visited {
     border-radius: 6px;
 }
 a.button:hover, a.button:active {
-    background-color: #b0b0b0;
+    background-color: #c0c0c0;
 }
 /* .image {
     /* float: left; */
@@ -141,6 +141,17 @@ div.desc {
     min-width: 150px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    animation: growDown 500ms ease-in-out forwards;
+    transform-origin: top center;
+}
+
+@keyframes growDown {
+    0% {
+        transform: scaleY(0)
+    }
+    100% {
+        transform: scaleY(1)
+    }
 }
   
 .dropdown-content a {
