--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ body {
     /* font-family:"Source Sans Pro",sans-serif; */
     /* font-family:"Georgia",sans-serif; */
     /* font-family:"FreeSans",sans-serif; */
-    font-family:"Open Sans",sans-serif;
+    /* font-family:"Open Sans",sans-serif; */
+    /* font-family:"Raleway Medium",sans-serif; */
+    font-family:"Montserrat Medium",sans-serif;
     /* background-color: #d0e0f8; */
     
     background-image: url('images/dark-cubes-texture.jpg');
