--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@ body {
     /* font-family:"FreeSans",sans-serif; */
     /* font-family:"Open Sans",sans-serif; */
     /* font-family:"Raleway Medium",sans-serif; */
-    font-family:"Montserrat Medium",sans-serif;
+    /* font-family:"Montserrat Medium",sans-serif; */
+    /* font-family:"Source Sans Pro"; */
+    font-family:"Source Sans Pro",sans-serif;
     /* background-color: #d0e0f8; */
     
     background-image: url('images/dark-cubes-texture.jpg');
@@ -37,8 +39,13 @@ body {
     padding: 0 20px;
 }
 p {
+    /* margin-block-start: 20px;
+    margin-block-end: 20px; */
     font-size: 20px;
     /* line-height: 1.5; */
+}
+.title {
+    font-family:"Raleway Medium",sans-serif;
 }
 li {
     font-size: 20px;
@@ -47,7 +54,7 @@ a {
     font-size: 20px;
 }
 a.button:link, a.button:visited {
-    background-color: #d8d8d8;
+    background-color: #f0f0f0;
     color: black;
     padding: 5px 10px;
     text-align: center;
@@ -55,9 +62,10 @@ a.button:link, a.button:visited {
     display: inline-block;
     border: 1px solid #404040;
     border-radius: 6px;
+    transition: 0.3s;
 }
 a.button:hover, a.button:active {
-    background-color: #c0c0c0;
+    background-color: #d0d0d0;
 }
 /* .image {
     /* float: left; */
@@ -161,6 +169,7 @@ div.desc {
     padding: 12px 15px;
     text-decoration: none;
     display: block;
+    transition: 0.3s;
 }
 
 button {
