--- a/sidebar.css
+++ b/sidebar.css
@@ -23,7 +23,7 @@ body {
     overflow-x: hidden;
     /* transition: 0s; */
     transition: 0.5s;
-    padding-top: 50px;
+    padding-top: 15px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 .backsidebar {
@@ -35,8 +35,15 @@ body {
     left: 0;
 }
 .sidebar span {
-    padding: 8px 8px 8px 20px;
+    /* padding: 8px 8px 8px 20px; */
+    padding-left: 20px;
+    padding-top: 5px;
+    padding-bottom: 15px;
     font-size: 18px;
+    display: block;
+}
+.sidebar h2 {
+    padding-left: 20px;
     display: block;
 }
 .sidebar a {
@@ -52,19 +59,27 @@ body {
     border-radius: 6px;
 }
 .sidebar .closebtn {
-    padding: 8px 8px 8px 20px;
-    /* position: absolute;
-    top: 0;
-    font-size: 30px;
-    cursor: pointer; */
+    /* padding: 8px 8px 8px 20px; */
+    background-color: #d0d0d0;
+    border-radius: 6px;
+    cursor: pointer;
     position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 30px;
-    margin-left: 50px;
+    right: 15px;
+    font-size: 0px;
+    transition: 0.3s;
+}
+.sidebar .closebtn:hover {
+    background-color: #b0b0b0;
+}
+.sidebar .closebtn img {
+    padding: 8px;
 }
 .openbtn {
+    background-color: #d0d0d0;
     font-size: 24px;
     cursor: pointer;
     background-color: lightblue;
+}
+.openbtn img {
+    padding: 8px;
 }
