--- a/style.css
+++ b/style.css
@@ -1,9 +1,5 @@
 /* Style di Website */
 
-/* Fonts */
-@import url("https://fonts.googleapis.com/css?family=Inter");
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
-
 body {
     /* font-family:"Open Sans Black",sans-serif; */
     /* font-family:"Segoe UI Medium",sans-serif; */
@@ -177,60 +173,87 @@ div.desc {
     background-color: #d0d0d0;
 }
 
-/* Dropdown */
-.dropbtn {
-    background-color: #103880;
-    color: white;
-    padding: 10px;
-    font-size: 20px;
-    border: none;
-}
-  
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-  
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f0f0f0;
-    border-radius: 6px;
-    min-width: 150px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+/* Sidebar */
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
     z-index: 1;
-    animation: growDown 500ms ease-in-out forwards;
-    transform-origin: top center;
+    top: 0;
+    left: 0;
+    /* background-color: lightblue; */
+    background-color: #f0f0f0;
+    overflow-x: hidden;
+    /* transition: 0s; */
+    transition: 0.5s;
+    padding-top: 15px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
-
-@keyframes growDown {
-    0% {
-        transform: scaleY(0)
-    }
-    100% {
-        transform: scaleY(1)
-    }
+.backsidebar {
+    background-color: rgb(0,0,0,0.3);
+    display: none;
+    width: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
-  
-.dropdown-content a {
+.sidebar span {
+    /* padding: 8px 8px 8px 20px; */
+    padding-left: 20px;
+    padding-top: 5px;
+    padding-bottom: 15px;
+    font-size: 18px;
+    display: block;
+}
+.sidebar h2 {
+    padding-left: 20px;
+    display: block;
+}
+.sidebar a {
     color: black;
-    padding: 12px 15px;
+    padding: 8px 8px 8px 20px;
+    font-size: 18px;
     text-decoration: none;
     display: block;
     transition: 0.3s;
 }
-
-button {
-    font-family:"Open Sans",sans-serif;    
-}
-
-.dropdown:hover .dropbtn {background-color: #103070;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown-content a:hover {
+.sidebar a:hover {
     background-color: #d0d0d0;
     border-radius: 6px;
+}
+.sidebar .closebtn {
+    /* padding: 8px 8px 8px 20px; */
+    background-color: #d0d0d0;
+    border-radius: 6px;
+    cursor: pointer;
+    position: absolute;
+    right: 15px;
+    font-size: 0px;
+    transition: 0.3s;
+}
+.sidebar .closebtn:hover {
+    background-color: #b0b0b0;
+}
+.sidebar .closebtn img {
+    padding: 8px;
+}
+.openbtn {
+    /* background-color: #d0d0d0; */
+    /* background-color: lightblue;
+    font-size: 24px;
+    cursor: pointer; */
+    background-color: #103880;
+    border-radius: 6px;
+    cursor: pointer;
+    width: 46px;
+    font-size: 0px;
+    transition: 0.3s;
+}
+.openbtn:hover {
+    background-color: #0d2c68;
+}
+.openbtn img {
+    padding: 8px;
 }
 
 
