--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ a.button:hover, a.button:active {
 /* .margin-left */
 .container2 {
     margin-left: 30px; /* Sesuaikan dengan nilai yang diinginkan */
+    font-size: 20px;
 }
 .box {
     /* margin-block-start: 20px; */
@@ -201,6 +202,7 @@ div.gallery img {
     height: auto;
 }
 div.desc {
+    font-size: 16px;
     padding: 15px;
     text-align: center;
 }
@@ -390,6 +392,12 @@ div.desc {
     opacity: 1;
 }
 
+/* .tooltip::after {
+    content: "";
+    display: table;
+    clear: both;
+} */
+
 /* Collapsible */
 .collapsible {
     background-color: #777;
@@ -493,4 +501,73 @@ div.desc {
 }
 .closebtn2 img {
     padding: 8px;
+}
+
+
+/* The Modal (background) */
+#myImg {
+    /* border-radius: 5px; */
+    cursor: pointer;
+    transition: 0.3s;
+}  
+#myImg:hover {opacity: 0.7;}
+.modal-image {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
+}
+.modal-image-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+.modal-image-content, #caption {
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+@-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)} 
+    to {-webkit-transform:scale(1)}
+}
+@keyframes zoom {
+    from {transform:scale(0)} 
+    to {transform:scale(1)}
+}
+/* The Close Button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    /* color: #f1f1f1; */
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+.close:hover, .close:focus {
+    /* color: #bbb; */
+    color: #c0c0c0;
+    text-decoration: none;
+    cursor: pointer;
 }
