--- a/style.css
+++ b/style.css
@@ -343,6 +343,21 @@ div.desc {
 	border-radius: 6px;
 	width: 200px;
 }
+#searchbtn {
+	width: 100%;
+	font-family:"Inter",sans-serif;
+	font-size: 18px;
+	padding: 5px 10px;
+    background-color: #283040;
+    color: white;
+	border: 1px solid gray;
+	border-radius: 6px;
+	width: 100px;
+    transition: 0.3s;
+}
+#searchbtn:hover {
+    background-color: #303840;
+}
 
 /* Style the navigation menu inside the left column */
 #myMenu {
@@ -362,11 +377,15 @@ div.desc {
 .tooltip .tooltiptext {
     visibility: hidden;
     width: 200px;
-    background-color: #555;
-    color: #fff;
+    /* background-color: #555; */
+    background-color: white;
+    color: black;
     text-align: center;
+    border: 1px solid gray;
     border-radius: 6px;
-    padding: 5px 0;
+    box-shadow: 0px 0px 10px 10px rgba(0,0,0,0.2);
+    /* padding: 5px 0; */
+    padding: 10px;
     position: absolute;
     z-index: 1;
     bottom: 125%;
@@ -384,7 +403,7 @@ div.desc {
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
-    border-color: #555 transparent transparent transparent;
+    border-color: white transparent transparent transparent;
 }
   
 .tooltip:hover .tooltiptext {
@@ -505,17 +524,36 @@ div.desc {
 
 
 /* The Modal (background) */
-/* #myImg {
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 0.3s;
-}  
-#myImg:hover {opacity: 0.7;} */
-.image {
+#myImg {
     /* border-radius: 5px; */
     cursor: pointer;
     transition: 0.3s;
 }  
+#myImg:hover {opacity: 0.7;}
+.modal-image {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
+}
+.modal-image-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+.image {
+    /* border-radius: 5px; */
+    cursor: pointer;
+    transition: 0.3s;
+}
 .image:hover {opacity: 0.7;}
 .modal-image {
     display: none; /* Hidden by default */
