--- a/projects/radio-buttons.css
+++ b/projects/radio-buttons.css
@@ -2,10 +2,14 @@
 .rb-container {
     display: block;
     position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
+    /* padding-left: 35px;
+    margin-bottom: 12px; */
+    padding: 2px 35px;
+    margin-left: 3px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     cursor: pointer;
-    font-size: 22px;
+    /* font-size: 22px; */
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -17,45 +21,55 @@
     position: absolute;
     opacity: 0;
     cursor: pointer;
+    height: 0;
+    width: 0;
 }
 
 /* Create a custom radio button */
-.checkmark {
+.checkradio {
     position: absolute;
     top: 0;
     left: 0;
-    height: 25px;
-    width: 25px;
+    /* height: 25px;
+    width: 25px; */
+    height: 20px;
+    width: 20px;
     background-color: #eee;
+    border-width: 1px;
     border-radius: 50%;
+    transition: .2s;
 }
 
 /* On mouse-over, add a grey background color */
-.container:hover input ~ .checkmark {
+.rb-container:hover input ~ .checkradio {
     background-color: #ccc;
 }
 
 /* When the radio button is checked, add a blue background */
-.container input:checked ~ .checkmark {
+.rb-container input:checked ~ .checkradio {
     background-color: #2196F3;
 }
 
 /* Create the indicator (the dot/circle - hidden when not checked) */
-.checkmark:after {
+.checkradio:after {
     content: "";
     position: absolute;
     display: none;
 }
 
 /* Show the indicator (dot/circle) when checked */
-.container input:checked ~ .checkmark:after {
+.rb-container input:checked ~ .checkradio:after {
     display: block;
 }
 
 /* Style the indicator (dot/circle) */
-.container .checkmark:after {
-    top: 9px;
+.rb-container .checkradio:after {
+    /* top: 9px;
     left: 9px;
+    width: 8px;
+    height: 8px; */
+    top: 6px;
+    left: 6px;
     width: 8px;
     height: 8px;
     border-radius: 50%;
