--- a/projects/radio-buttons.css
+++ b/projects/radio-buttons.css
@@ -35,6 +35,7 @@
     height: 20px;
     width: 20px;
     background-color: #eee;
+    border: solid #404040;
     border-width: 1px;
     border-radius: 50%;
     transition: .2s;
@@ -42,12 +43,12 @@
 
 /* On mouse-over, add a grey background color */
 .rb-container:hover input ~ .checkradio {
-    background-color: #ccc;
+    background-color: #c0c0c0;
 }
 
 /* When the radio button is checked, add a blue background */
 .rb-container input:checked ~ .checkradio {
-    background-color: #2196F3;
+    background-color: #2080f0;
 }
 
 /* Create the indicator (the dot/circle - hidden when not checked) */
