--- a/style.css
+++ b/style.css
@@ -27,7 +27,13 @@ body {
     /* margin: 30px; */
     margin: 0;
 }
+/* html {
+    scroll-behavior: smooth;
+} */
 html {
+    --darkmode: 0;
+    container-name: root;
+    container-type: normal;
     scroll-behavior: smooth;
 }
 
