--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
     background-size: 100% 100%;
     /* margin: 30px; */
     margin: 0;
+	word-wrap: break-word;
 }
 /* html {
     scroll-behavior: smooth;
@@ -35,7 +36,11 @@ html {
     container-name: root;
     container-type: normal;
     scroll-behavior: smooth;
+	scroll-padding-top: 130px;
 }
+/* * {
+    box-sizing: border-box;
+} */
 
 .top-container {
     /* position: -webkit-sticky; */
@@ -77,27 +82,35 @@ html {
     border-bottom: 4px solid #30c050;
     width: auto;
 }
+/* .margin-left */
+.container {
+    /* margin-left: 30px; Sesuaikan dengan nilai yang diinginkan */
+    /* margin:0 auto; */
+    margin: 0 auto; /* this will center the page */
+    width: 80%; /*  use your width here */
+    background-color: #d0e0f8;
+	/* Dari Gemini AI */
+	/* max-width: 80%; /* Lebar maksimal di desktop */
+    padding: 20px;    /* Jarak dari pinggir layar HP */
+	box-sizing: border-box; /* Supaya padding tidak melebarkan elemen */
+}
 .title-container {
     margin: 0 auto;
     width: 80%;
     background-color: white;
     background-image: repeating-linear-gradient(180deg,white,white 0%,#d0e0f8);
-    padding: 0 20px;
-}
-/* .margin-left */
-.container {
-    /* margin-left: 30px; Sesuaikan dengan nilai yang diinginkan */
-    /* margin:0 auto; */
-    margin:0 auto; /* this will center the page */
-    width:80%; /*  use your width here */
-    background-color: #d0e0f8;
-    padding: 0 20px;
+    padding: 20px;
+	box-sizing: border-box;
 }
 /* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1250px) {
     .container {
         width: 100%;
+		max-width: 1000px;
     }
+	.disappear {
+	    display: none;
+	}
 }
 
 p {
@@ -171,7 +184,7 @@ a.button:hover, a.button:active {
 .box {
     /* margin-block-start: 20px; */
     background-color: #c4d0f4;
-    max-width: 1000px;
+	width: 100%;
     padding-left: 20px;
     border: 2px solid black;
     box-sizing: border-box;
@@ -182,6 +195,12 @@ a.button:hover, a.button:active {
     justify-content: center;
     align-items: center;
     height: 100vh; /* Untuk mengisi seluruh tinggi viewport */
+}
+img {
+    max-width: 100%; /* Gambar tidak akan melebihi lebar layar */
+    height: auto;    /* Tinggi menyesuaikan proporsi */
+    /* display: block; */
+    /* margin: 10px 0; */
 }
 
 /* Table */
@@ -635,9 +654,14 @@ div.desc {
         background-color: #202438;
         color: white;
     }
+	.title-container {
+        background-color: gray;
+        background-image: repeating-linear-gradient(180deg,#80a0c0,#6080a0 0%,#202438);
+    }
     .box {
         /* background-color: #c4d0f4; */
         background-color: #082034;
+		border: 1px solid white;
     }
     /* a.external {
         font-size: 16px;
@@ -666,6 +690,9 @@ div.desc {
     a.button:hover, a.button:active {
         background-color: #404040;
     }
+	img.imginvert {
+	    filter: invert(100%);
+	}
     /* Table */
     table, th, td {
         background-color: #20242c;
