--- a/colors.css
+++ b/colors.css
@@ -12,6 +12,8 @@
 .color008 {color: maroon}
 .color009 {color: #300080}
 .color010 {color: green}
+.color011 {color: #404040}
+.color012 {color: #c06000}
 
 /* Dark Mode */
 @container root style(--darkmode: 1) {
@@ -26,4 +28,6 @@
 	.color008 {color: red}
 	.color009 {color: #b080ff}
 	.color010 {color: lime}
+	.color011 {color: gray}
+	.color012 {color: darkorange}
 }
