--- a/colors.css
+++ b/colors.css
@@ -10,7 +10,7 @@
 .color006 {color: darkgreen}
 .color007 {color: #808000}
 .color008 {color: maroon}
-.color009 {color: #300080}
+.color009 {color: #200080}
 .color010 {color: green}
 .color011 {color: gray}
 .color012 {color: #c06000}
@@ -26,7 +26,7 @@
 	.color006 {color: #80ff80}
 	.color007 {color: yellow}
 	.color008 {color: red}
-	.color009 {color: #b080ff}
+	.color009 {color: #a080ff}
 	.color010 {color: lime}
 	.color011 {color: #c0c0c0}
 	.color012 {color: darkorange}
