--- a/style.css
+++ b/style.css
@@ -567,8 +567,8 @@ div.desc {
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.3); /* Black w/ opacity */
+    /* background-color: rgb(0,0,0); /* Fallback color */
+    /* background-color: rgba(0,0,0,0.3); /* Black w/ opacity */
 }
 .modal-content {
     /* background-color: #fefefe; */
@@ -579,6 +579,17 @@ div.desc {
     border: 1px solid #888;
     width: 60%;
 	white-space: initial;
+	z-index: 2;
+}
+.back-modal-content {
+    background-color: rgb(0,0,0,0.3);
+    display: none;
+    /* width: 0; */
+	width: 100%;
+	height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 .closebtn2 {
     background-color: #d0d0d0;
@@ -694,7 +705,7 @@ div.desc {
 		display: none;
 	}
 	.page-container input {
-		width: auto;
+		width: 220px;
 	}
     .modal-content {
 	    width: 90%;
